moved image dir to public

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,11 +61,11 @@
 
 <div class="containergallery">
 <div class="row">
-	<%friends.forEach(function(friend){ %>
-    <li><%= friend %></li>
+	<%pictures.forEach(function(picture){ %>
+    <div class="col-xs-12 col-lg-4"><img src="<%= picture %>" class="img-thumbnail"></div>
 <%}); %>
 
-    <div class="col-xs-12 col-lg-4"><img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail"></div>
+    <!--<div class="col-xs-12 col-lg-4"><img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail"></div>-->
   	
 </div>
 </div>
