--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,14 +43,14 @@
     </script>
 </head>
 <body>
-<h1 class="col-lg-12">Caro and Chris' Wedding Photos</h1>
+<h1>Caro and Chris' Wedding Photos</h1>
 <form class="form-inline" id="frmUploader" enctype="multipart/form-data" action="api/upload/" method="post">
   	<div class="container-fluid">
 	 	<div class="row-fluid">
 	 		<div class="col-lg-12">
 	 			<div class="content">
 	 				
-	 				<h3>Upload your photos here and share with the group!</h3>
+	 				<h3>Upload 10 photos at a time. Click "Browse", select your photos, and click "Upload"!</h3>
 	 				
     <form id="frmUploader" enctype="multipart/form-data" action="api/upload/" method="post">
         <label class="sr-only" for="inlineFormInput">Your Name</label>
@@ -73,14 +73,9 @@
 	<%pictures.forEach(function(picture){ %>
     <div class="col-xs-12 col-lg-4"><img src="<%= picture %>" id="imggallery" class="img-thumbnail"></div>
 <%}); %>
-
-    <!--<div class="col-xs-12 col-lg-4"><img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail"></div>-->
   	
 </div>
 </div>
-
-
-
 </body>
 </html>
 
