view: replace img with correct orientation. broken

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,9 +94,9 @@
                     noRevoke: true,
                 }
             );
-            //$(newimg).addClass("img-thumbnail");
-            //$(e.currentTarget).replaceWith(newimg);
-            //console.log(e.currentTarget);
+            $(newimg).addClass("img-thumbnail");
+            $(e.currentTarget).replaceWith(newimg);
+            console.log(e.currentTarget);
         };
     };
 
