--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <head>
 	<title>EventBot!</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="eventbot.css">
+    <link rel="stylesheet" type="text/css" href="css/eventbot.css">
     <script src="scripts/load-image.all.min.js"></script>
     <script src="scripts/jquery-3.1.1.min.js"></script> 
     <script src="scripts/jquery.form.min.js"></script>
