--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>EventBot!</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/eventbot.css">
     <script src="scripts/load-image.all.min.js"></script>
     <script src="scripts/jquery-3.1.1.min.js"></script> 
