refresh after upload successful and add yourname id

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,12 +27,13 @@
         function showRequest(formData, jqForm, options) {
             alert('Uploading is starting.');
             return true;
-        }
+        };
 
         // post-submit callback
         function showResponse(responseText, statusText, xhr, $form) {
             alert('status: ' + statusText + '\n\nresponseText: \n' + responseText );
-        }
+            location.reload();
+        };
     </script>
 </head>
 <body>
@@ -46,7 +47,7 @@
 	 				<h3>Upload 10 photos at a time. Click "Browse", select your photos, and click "Upload"!</h3>
 	 				
     <form id="frmUploader" enctype="multipart/form-data" action="api/upload/" method="post">
-        <label class="sr-only" for="inlineFormInput">Your Name</label>
+        <label class="sr-only" for="inlineFormInput" id="yourname">Your Name</label>
 	<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" placeholder="Your Name">
 	<label class="btn btn-primary">Browse&hellip;
             <input type="file" style="display: none;" name="imgUploader" multiple />
@@ -70,6 +71,7 @@
 </div>
 </div>
 <script type="text/javascript">
+    var yourname = getElementById("yourname").value;
      //gets a list of img-thumbnail elements
     var list_of_elements = document.getElementsByClassName("img-thumbnail");
     console.log(list_of_elements);
