--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
 	 				
     <form id="frmUploader" enctype="multipart/form-data" action="/api/upload/" method="post">
         <label class="sr-only" for="inlineFormInput">Your Name</label>
-	<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="yourname" name="name" placeholder="Your Name">
+	<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="yourname" name="name" placeholder="Your Name" required>
 	<label class="btn btn-primary">Browse&hellip;
             <input type="file" style="display: none;" name="imgUploader" multiple />
 	</label>
