--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
 <!--Loads image for each item in the pictures list array. Generates html -->
 <div class="containergallery">
 <div class="row">
-	<% pictures.forEach(function(picture) { %>
+	<% for (var i = 0; i < 15; i++i) { %>
 		<div class="col-xs-12 col-lg-4">
 			<img src="<%= picture %>" class="img-thumbnail" data-orientation="<%= orientations[picture] %>">
 		</div>
