--- a/public/css/eventbot.css
+++ b/public/css/eventbot.css
@@ -10,7 +10,7 @@ h1 {
 	text-transform: uppercase;
 	width: 100%;
 	margin-bottom: 5px;
-	margin-left: 1.66%;
+	/*margin-left: 1.66%;*/
 	float:left;	
 }
 
@@ -19,6 +19,16 @@ h3	{
 	font-family: 'Saira Semi Condensed', sans-serif;
 	color: white;
 
+}
+
+.aboutP {
+	font-size: 1.5em;
+	font-family: 'Saira Semi Condensed', sans-serif;
+	color: white;
+	display: block;
+	width: 80%;
+	padding: 0px 0px 0px 30px;
+	margin: 0;
 }
 
 img {
