--- a/views/about.html
+++ b/views/about.html
@@ -1,18 +1,22 @@
+<!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../public/css/eventbot.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About</title>
 </head>
 <body>
     <h1>About Us</h1>
-    <p>EventBot is an opensource photo and video sharing app and device built in Los Angeles by Rachel and Lucas. 
+    <p class="aboutP">EventBot is an open source photo and video sharing app and device built in Los Angeles by Rachel and Lucas. 
         They hated going to parties where the hosts make you sign up for yet another photo sharing app with size limits, registration, permissions, and ownership of your photos. So they made EventBot - a device where you can share photos at your event, 
-        automatically share photos on a local site, and walk away with the original files your guests uploaded. </p>
-
- <p>Rachel and Lucas live in Los Angeles and invent cool things to help solve everyday problems. 
+        automatically share photos on a local site, and walk away with the original files your guests uploaded. 
+    </p>
+    <br></br>
+    <p class="aboutP">Rachel and Lucas live in Los Angeles and invent cool things to help solve everyday problems. 
      They make them open source on Github <a href="https://github.com/mzzroboto">@mzzroboto</a> and <a href="https://github.com/lucasrangit">@lucasrangit</a>. You can view this project at <a href="https://github.com/robotnyc/EventBot">https://github.com/robotnyc/EventBot</a> 
-    .</p>
+    .
+    </p>
 </body>
 </html>
