changed link colors and font sizes

--- a/public/css/eventbot.css
+++ b/public/css/eventbot.css
@@ -2,12 +2,19 @@ body {
 	background-color: #000000;
 }
 
+a:link {
+	color: #71EEB8;
+}
+
+a:visited {
+	color: #f2f7f4;
+}
+
 h1 {
-	font-family: 'Amatic SC', cursive;
+	font-family: 'Lobster', cursive;
 	color: white;
-	font-size:40px;
+	font-size:50px;
 	font-weight: 800;
-	text-transform: uppercase;
 	width: 100%;
 	margin-bottom: 5px;
 	/*margin-left: 1.66%;*/
