--- a/public/css/eventbot.css
+++ b/public/css/eventbot.css
@@ -71,3 +71,25 @@ img {
        url('../fonts/saira-semi-condensed-v3-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+button {
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	background-color: black;
+	color: white;
+	border: 2px solid black;
+}
+
+button:hover {
+	background-color: #ffffff;
+	color: black;
+}
+
+.button:focus {
+	background-color: #71EEB8;
+	color:black;
+}
+
+.focused {
+	background-color: #71EEB8;
+	color:black;
+}
